--- a/MSMineSweeper/Base.lproj/Main.storyboard
+++ b/MSMineSweeper/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="pkE-bZ-G9U">
                                 <rect key="frame" x="63" y="20" width="35" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="flag2.png">
+                                <state key="normal" image="flag.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
@@ -52,7 +52,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="flag2.png" width="50" height="50"/>
+        <image name="flag.png" width="50" height="50"/>
         <image name="mine.png" width="50" height="50"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
