--- a/MSMineSweeper/Base.lproj/Main.storyboard
+++ b/MSMineSweeper/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                             </button>
                             <view contentMode="scaleToFill" id="Q9z-yf-fa1">
                                 <rect key="frame" x="33" y="20" width="255" height="48"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="rad-Cq-NX1">
                                         <rect key="frame" x="0.0" y="6" width="35" height="35"/>
@@ -148,7 +148,7 @@
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="残り地雷数：150" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6yT-Zy-9mg">
                                         <rect key="frame" x="86" y="6" width="169" height="35"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
